Fix Layer config not registered